welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:5: error: value n is not a member of Nothing
possible cause: maybe a semicolon is missing before `value n'?
	}n else {
         ^